--- a/design/cross-components/footer/footer.html
+++ b/design/cross-components/footer/footer.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VetApp</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../../index.css">
+    <link rel="stylesheet" href="./footer.css">
 </head>
 <body class="body">
-    <header class="haeder">
-        <p>Header</p>
-    </header>
-    <main class="main">
-        <p>Main</p>
-    </main>
+    <header class="haeder"></header>
+    <main class="main"></main>
     <footer class="footer">
         <p class="footer__p">VetApp - derechos reservados</p>
     </footer>
