--- a/design/cross-components/header/header.html
+++ b/design/cross-components/header/header.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VetApp</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
-<body>
-    
+<body class="body">
+    <header>
+
+    </header>
+
+    <main>
+        
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
