--- a/design/admin-layout/patients/patients.html
+++ b/design/admin-layout/patients/patients.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VetApp</title>
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./cross-components/header/header.css">
-    <link rel="stylesheet" href="./cross-components/footer/footer.css">
+    <link rel="stylesheet" href="../../index.css">
+    <link rel="stylesheet" href="../../cross-components/header/header.css">
+    <link rel="stylesheet" href="../../cross-components/footer/footer.css">
     <script src="https://kit.fontawesome.com/33c5bb1d43.js" crossorigin="anonymous"></script>
-    <script src="./cross-components/header/header.js"></script>
+    <script src="../../cross-components/header/header.js"></script>
 </head>
 <body class="body">
     <header class="haeder">
         <figure class="logo">
-            <img class="logo__image" src="../src/assets/logo-huella-hoja.jpg" alt="VetApp">
+            <img class="logo__image" src="../../../src/assets/logo-huella-hoja.jpg" alt="VetApp">
             <label class="logo__label">VetApp</label>
         </figure>
-        <button class="fa-solid fa-circle-user header__button--menu" onclick="menuOpenHandler('Pacientes')"></button>
+        <button class="fa-solid fa-circle-user header__button--menu" onclick="menuOpenHandler('Mascotas')"></button>
         <nav id="nav" class="nav">
             <div class="nav__button">
                 <button class="fa-solid fa-xmark nav__button--close" onclick="menuCloseHandler()"></button>
@@ -30,7 +30,18 @@
         </nav>
     </header>
     <main class="main">
-        <p>Main</p>
+        <h1 class="main__title">Turnos</h1>
+        <div class="main__content">
+            <div class="main__content--filter">
+                <h2>Filtros</h2>
+                <div class="filter">
+
+                </div>
+            </div>
+            <div class="main__content--data">
+                <p>content</p>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <p class="footer__p">VetApp - derechos reservados</p>
