--- a/design/consumer-layout/turn/turn.html
+++ b/design/consumer-layout/turn/turn.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VetApp</title>
-    <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="../cross-components/header/header.css">
-    <link rel="stylesheet" href="../cross-components/footer/footer.css">
+    <link rel="stylesheet" href="../../index.css">
+    <link rel="stylesheet" href="../../cross-components/header/header.css">
+    <link rel="stylesheet" href="../../cross-components/footer/footer.css">
+    <link rel="stylesheet" href="../../cross-components/main-component/main-component.css">
+    <link rel="stylesheet" href="../../cross-components/turn-filter/turn-filter.css">
     <script src="https://kit.fontawesome.com/33c5bb1d43.js" crossorigin="anonymous"></script>
-    <script src="../cross-components/header/header.js"></script>
+    <script src="../../cross-components/header/header.js"></script>
 </head>
 <body class="body">
     <header class="haeder">
         <figure class="logo">
-            <img class="logo__image" src="../../src/assets/logo-huella-hoja.jpg" alt="VetApp">
+            <img class="logo__image" src="../../../src/assets/logo-huella-hoja.jpg" alt="VetApp">
             <label class="logo__label">VetApp</label>
         </figure>
-        <button class="fa-solid fa-circle-user header__button--menu" onclick="menuOpenHandler('Pacientes')"></button>
+        <button class="fa-solid fa-circle-user header__button--menu" onclick="menuOpenHandler('Mascotas')"></button>
         <nav id="nav" class="nav">
             <div class="nav__button">
                 <button class="fa-solid fa-xmark nav__button--close" onclick="menuCloseHandler()"></button>
@@ -34,9 +36,24 @@
         <div class="main__content">
             <div class="main__content--filter">
                 <h2>Filtros</h2>
-                <div class="filter">
 
+
+                <div class="filter">
+                    <div class="filter__item">
+                        <label>Buscar por fecha:</label>
+                        <input type="date">
+                    </div>
+                    <div class="filter__item">
+                        <label>Buscar para hoy:</label>
+                        <input type="checkbox">
+                    </div>
+                    <div class="filter__item">
+                        <label>Buscar para esta semana:</label>
+                        <input type="checkbox">
+                    </div>
                 </div>
+
+
             </div>
             <div class="main__content--data">
                 <p>content</p>
