--- a/design/cross-components/header/header.html
+++ b/design/cross-components/header/header.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VetApp</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../../index.css">
+    <link rel="stylesheet" href="./header.css">
+    <link rel="stylesheet" href="../footer/footer.css">
+    <script src="https://kit.fontawesome.com/33c5bb1d43.js" crossorigin="anonymous"></script>
+    <script src="./header.js"></script>
 </head>
 <body class="body">
-    <header>
-
+    <header class="haeder">
+        <figure class="logo">
+            <img class="logo__image" src="../../../src/assets/logo-huella-hoja.jpg" alt="VetApp">
+            <label class="logo__label">VetApp</label>
+        </figure>
+        <button class="fa-solid fa-circle-user header__button--menu" onclick="menuOpenHandler('Pacientes')"></button>
+        <nav id="nav" class="nav">
+            <div class="nav__button">
+                <button class="fa-solid fa-xmark nav__button--close" onclick="menuCloseHandler()"></button>
+            </div>
+            <ul class="nav__ul">
+                <a class="nav__ul--link" href="">Perfil</a>
+                <a class="nav__ul--link" id="link-page" href="">Xxxxxx</a>
+                <a class="nav__ul--link" href="">Turnos</a>
+                <button class="fa-solid fa-right-from-bracket nav__ul--logout nav__ul--link"></button>
+            </ul>
+        </nav>
     </header>
-
-    <main>
-        
-    </main>
-
-    <footer>
-
-    </footer>
+    <main class="main"></main>
+    <footer class="footer"></footer>
 </body>
 </html>
