--- a/design/consumer-layout/turn/turn.html
+++ b/design/consumer-layout/turn/turn.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../cross-components/footer/footer.css">
     <link rel="stylesheet" href="../../cross-components/main-component/main-component.css">
     <link rel="stylesheet" href="../../cross-components/turn-filter/turn-filter.css">
+    <link rel="stylesheet" href="../../cross-components/grid-component/grid-component.css">
     <script src="https://kit.fontawesome.com/33c5bb1d43.js" crossorigin="anonymous"></script>
     <script src="../../cross-components/header/header.js"></script>
 </head>
@@ -24,9 +25,9 @@
                 <button class="fa-solid fa-xmark nav__button--close" onclick="menuCloseHandler()"></button>
             </div>
             <ul class="nav__ul">
-                <a class="nav__ul--link" href="">Perfil</a>
-                <a class="nav__ul--link" id="link-page" href="">Xxxxxx</a>
-                <a class="nav__ul--link" href="">Turnos</a>
+                <a class="nav__ul--link" href="../profile/profile.html">Perfil</a>
+                <a class="nav__ul--link" id="link-page" href="../pets/pets.html">Xxxxxx</a>
+                <a class="nav__ul--link" href="../turn/turn.html">Turnos</a>
                 <button class="fa-solid fa-right-from-bracket nav__ul--logout nav__ul--link"></button>
             </ul>
         </nav>
@@ -36,27 +37,66 @@
         <div class="main__content">
             <div class="main__content--filter">
                 <h2>Filtros</h2>
-
-
                 <div class="filter">
                     <div class="filter__item">
-                        <label>Buscar por fecha:</label>
-                        <input type="date">
+                        <label class="filter__item--size filter__item--font">Por fecha</label>
+                        <input class="filter__item--background" type="date">
                     </div>
                     <div class="filter__item">
-                        <label>Buscar para hoy:</label>
-                        <input type="checkbox">
+                        <label class="filter__item--size filter__item--font">Hoy</label>
+                        <input class="filter__item--color" type="checkbox">
                     </div>
                     <div class="filter__item">
-                        <label>Buscar para esta semana:</label>
-                        <input type="checkbox">
+                        <label class="filter__item--size filter__item--font">Esta semana</label>
+                        <input class="filter__item--color" type="checkbox">
                     </div>
                 </div>
-
-
             </div>
             <div class="main__content--data">
-                <p>content</p>
+                <div class="content">
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3 class="content__item--title">TURNO</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
