--- a/design/cross-components/turn-filter/turn-filter.html
+++ b/design/cross-components/turn-filter/turn-filter.html
@@ -18,24 +18,20 @@
         <div class="main__content">
             <div class="main__content--filter">
                 <h2>Filtros</h2>
-
-
                 <div class="filter">
                     <div class="filter__item">
-                        <label>Buscar por fecha:</label>
-                        <input type="date">
+                        <label class="filter__item--size filter__item--font">Por fecha</label>
+                        <input class="filter__item--background" type="date">
                     </div>
                     <div class="filter__item">
-                        <label>Buscar para hoy:</label>
-                        <input type="checkbox">
+                        <label class="filter__item--size filter__item--font">Hoy</label>
+                        <input class="filter__item--color" type="checkbox">
                     </div>
                     <div class="filter__item">
-                        <label>Buscar para esta semana:</label>
-                        <input type="checkbox">
+                        <label class="filter__item--size filter__item--font">Esta semana</label>
+                        <input class="filter__item--color" type="checkbox">
                     </div>
                 </div>
-                
-
             </div>
             <div class="main__content--data"></div>
         </div>
