--- a/design/admin-layout/turn/turn.html
+++ b/design/admin-layout/turn/turn.html
@@ -16,7 +16,7 @@
 <body class="body">
     <header class="haeder">
         <figure class="logo">
-            <img class="logo__image" src="../../../src/assets/logo-huella-hoja.jpg" alt="VetApp">
+            <i class="fa-solid fa-paw logo__image"></i>
             <label class="logo__label">VetApp</label>
         </figure>
         <button class="fa-solid fa-circle-user header__button--menu" onclick="menuOpenHandler('Pacientes')"></button>
